# Simplex-Table

./: .gitignore  CMakeLists.txt  Fraction.cpp  Fraction.h  README.md  SimplexTable.cpp  SimplexTable.h  main.cpp
src/: main.cpp
src/Fraction/: Fraction.cpp  Fraction.h
src/SimplexTable/: SimplexTable.cpp  SimplexTable.h
src/tests/: CMakeLists.txt  test.cpp
